--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,7 +215,11 @@ workflows:
 
   commit:
     jobs:
-      - build-local
+      - build-local:
+          filters:
+            branches:
+              ignore:
+                - master
       - test-setup
       - test-unit:
           requires:
