--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,35 +213,24 @@ jobs:
 workflows:
   version: 2
 
-  commit:
+  build_test_release:
     jobs:
       - build-local:
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-setup
+          context: org-global
+
+      - test-setup:
+          context: org-global
+
       - test-unit:
-          requires:
-            - test-setup
-      - test-coverage:
+          context: org-global
           requires:
             - test-setup
 
-  release:
-    jobs:
-      - build-local:
-          filters:
-            branches:
-              only:
-                - master
-      - test-setup
-      - test-unit:
-          requires:
-            - test-setup
       - test-coverage:
+          context: org-global
           requires:
             - test-setup
+
       # New commits to master release automatically
       - release:
           context: org-global
@@ -249,23 +238,10 @@ workflows:
             - build-local
             - test-unit
             - test-coverage
-
-  publish:
-    jobs:
-      - build-local:
           filters:
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*(\-snapshot)?(\-hotfix(\.[0-9]+))?/
             branches:
-              ignore:
-                - /.*/
-      - test-setup
-      - test-unit:
-          requires:
-            - test-setup
-      - test-coverage:
-          requires:
-            - test-setup
+              only:
+                - master
 
       # New Tags are built and deployed as docker artifacts
       - publish:
@@ -274,4 +250,9 @@ workflows:
             - build-local
             - test-unit
             - test-coverage
-
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*(\-snapshot)?(\-hotfix(\.[0-9]+))?/
+            branches:
+              ignore:
+                - /.*/
