feat(tests): add unit tests (#4)
* feat(test): start unit tests

- removed unused cloudwatch settings

* chore(tidy): Remove references to deprecated cloudwatch

* chore(ci): add unit and coverage

* chore(ci): fix missing test output

* feat(test): expanding unit tests, fix coverage for now

* chore(release): 0.1.1

* chore(ci): Working on release config

* chore(ci): Working on release config

* chore(ci): Working on release config

* chore(ci): Working on release config

* chore(ci): Working on release config

* chore(ci): Working on release config

* chore(ci): Working on release config

* chore(release): 0.1.2

* chore(release): 0.1.2 [skip ci]

* chore(ci): make sure ci is skipped on a release bump

* chore(ci): make sure ci is skipped on a release bump

* chore(release): 0.1.3 [skip ci]

* chore(ci): streamlining workflows

* chore(ci): streamlining workflows

* chore(ci): streamlining workflows

Co-authored-by: circleci <mojaloop@circleci.com>

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rancher-scaler",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "A simple cli tool to scale rancher clusters",
   "main": "index.ts",
   "scripts": {
+    "build": "tsc",
     "start": "ts-node ./src/index.ts",
     "kube-scale:up": "./scripts/_scale_once.sh local-scale:up",
     "kube-scale:down": "./scripts/_scale_once.sh local-scale:down",
@@ -19,8 +20,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:unit": "jest --testMatch '**/src/**/*.unit.ts'",
     "test:service": "jest --testMatch '**/src/**/*.service.ts'",
+    "test:coverage": "jest --testMatch '**/src/**/*.unit.ts' --coverage --coverageThreshold='{}'",
+    "test:coverage-check": "jest --testMatch '**/src/**/*.unit.ts' --coverage",
     "lint": "eslint ./src/**/*.ts *.js",
-    "build": "tsc",
+    "release": "standard-version --releaseCommitMessageFormat 'chore(release): {{currentTag}} [skip ci]'",
     "watch": "tsc -w"
   },
   "author": "Lewis Daly",
@@ -31,7 +34,8 @@
     "@slack/webhook": "^5.0.3",
     "aws-sdk": "^2.713.0",
     "axios": "^0.19.2",
-    "unzipper": "^0.10.11"
+    "unzipper": "^0.10.11",
+    "standard-version": "^8.0.2"
   },
   "devDependencies": {
     "@types/hapi__joi": "^17.1.2",
