--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,76 @@ executors:
 # A map of CircleCI jobs
 ##
 jobs:
+  test-setup:
+    executor: default-docker
+    steps:
+      - checkout
+      - run:
+          name: Install general dependencies
+          command: *defaults_Dependencies
+      - restore_cache:
+          keys:
+            - dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Access npm folder as root
+          command: cd $(npm root -g)/npm
+      - run:
+          name: Update NPM install
+          command: npm ci
+      - run:
+          name: Delete build dependencies
+          command: apk del build-dependencies
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+
+  test-unit:
+    executor: default-docker
+    steps:
+      - checkout
+      - run:
+          name: Install general dependencies
+          command: *defaults_Dependencies
+      - restore_cache:
+          keys:
+          - dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Execute unit tests
+          command: npm run test:unit -- --reporters=default --reporters=jest-junit
+      - run:
+          name: prepare test/results
+          command: |
+            mkdir -p test/results
+            mv junit.xml test/results
+      - store_artifacts:
+          path: ./test/results
+          prefix: test
+      - store_test_results:
+          path: ./test/results
+
+  test-coverage:
+    executor: default-docker
+    steps:
+      - checkout
+      - run:
+          name: Install general dependencies
+          command: *defaults_Dependencies
+      - run:
+          name: Install AWS CLI dependencies
+          command: *defaults_awsCliDependencies
+      - restore_cache:
+          keys:
+            - dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Execute code coverage check
+          command: npm run test:coverage-check
+      - store_artifacts:
+          path: coverage
+          prefix: test
+      - store_test_results:
+          path: coverage
+
   build-local:
     executor: default-machine
     steps:
@@ -78,6 +148,34 @@ jobs:
           paths:
             - ./docker-image.tar
 
+  # TODO: run on only master
+  release:
+    executor: default-docker
+    steps:
+      - checkout
+      - run:
+          name: Install general dependencies
+          command: *defaults_Dependencies
+      - restore_cache:
+          keys:
+          - dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
+          name: Configure git + ssh
+          command: |
+            git config user.email "mojaloop@circleci.com"
+            git config user.name "circleci"
+            git checkout ${CIRCLE_BRANCH}
+            mkdir -p ~/.ssh
+            ssh-keyscan -p 443 ssh.github.com >> ~/.ssh/known_hosts
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
+      - run:
+          name: Generate changelog and bump package version
+          command: npm run release
+      - run:
+          name: Push the release
+          command: git push --follow-tags origin ${CIRCLE_BRANCH}
+
+  # TODO: modify git release message to be changelog
   publish:
     executor: default-machine
     steps:
@@ -93,28 +191,20 @@ jobs:
       - run:
           name: Re-tag pre built image
           command: |
-            # docker tag $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$CIRCLE_TAG $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$RELEASE_TAG
-            # TODO: configure this better...
             docker tag $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:local $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:latest
-      # - run:
-      #     name: Publish Docker image $CIRCLE_TAG & Latest tag to Docker Hub
-      #     command: |
-      #       echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$CIRCLE_TAG"
-      #       docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$CIRCLE_TAG
-      #       echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$RELEASE_TAG"
-      #       docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$RELEASE_TAG
+            docker tag $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:local $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}
       - run:
           name: Publish Docker image latest tag to Docker Hub
           command: |
             echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:latest"
             docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:latest
-            # echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$RELEASE_TAG"
-            # docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:$RELEASE_TAG
+            echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}"
+            docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}
+
       # - slack/status:
       #     webhook: "$SLACK_WEBHOOK_ANNOUNCEMENT"
       #     success_message: '*"${CIRCLE_PROJECT_REPONAME}"* - Release \`"${CIRCLE_TAG}"\` \nhttps://github.com/mojaloop/"${CIRCLE_PROJECT_REPONAME}"/releases/tag/"${CIRCLE_TAG}"'
-      
-  
+
 ##
 # Workflows
 #
@@ -122,18 +212,47 @@ jobs:
 ##
 workflows:
   version: 2
-  build_and_test:
+
+  build_test_release:
     jobs:
       - build-local:
           context: org-global
-    
+
+      - test-setup:
+          context: org-global
+
+      - test-unit:
+          context: org-global
+          requires:
+            - test-setup
+
+      - test-coverage:
+          context: org-global
+          requires:
+            - test-setup
+
+      # New commits to master release automatically
+      - release:
+          context: org-global
+          requires:
+            - build-local
+            - test-unit
+            - test-coverage
+          filters:
+            branches:
+              only:
+                - master
+
+      # New Tags are built and deployed as docker artifacts
       - publish:
           context: org-global
           requires:
             - build-local
-          # filters:
-          #   tags:
-          #     only: /v[0-9]+(\.[0-9]+)*(\-snapshot)?(\-hotfix(\.[0-9]+))?/
-          #   branches:
-          #     ignore:
-          #       - /.*/
+            - test-unit
+            - test-coverage
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*(\-snapshot)?(\-hotfix(\.[0-9]+))?/
+            branches:
+              ignore:
+                - /.*/
