--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ version: 2.1
 ##
 orbs:
   anchore: anchore/anchore-engine@1.6.0
+  github-release: izumin5210/github-release@0.1.1
   slack: circleci/slack@3.4.2
 
 ##
@@ -200,7 +201,9 @@ jobs:
             docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:latest
             echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}"
             docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}
-
+      - github-release/create:
+          release-name: ${CIRCLE_TAG}
+          release-body: ${CIRCLE_TAG} release
       # - slack/status:
       #     webhook: "$SLACK_WEBHOOK_ANNOUNCEMENT"
       #     success_message: '*"${CIRCLE_PROJECT_REPONAME}"* - Release \`"${CIRCLE_TAG}"\` \nhttps://github.com/mojaloop/"${CIRCLE_PROJECT_REPONAME}"/releases/tag/"${CIRCLE_TAG}"'
@@ -212,7 +215,6 @@ jobs:
 ##
 workflows:
   version: 2
-
   build_test_release:
     jobs:
       - build-local:
@@ -243,7 +245,6 @@ workflows:
             tags:
               only: /.*/
 
-
       # New commits to master release automatically
       - release:
           context: org-global
@@ -261,8 +262,8 @@ workflows:
           context: org-global
           requires:
             - build-local
-            - test-unit
-            - test-coverage
+            # - test-unit
+            # - test-coverage
           filters:
             tags:
               only: /.*/
