--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ version: 2.1
 ##
 orbs:
   anchore: anchore/anchore-engine@1.6.0
-  github-release: izumin5210/github-release@0.1.1
+  github-release: h-matsuo/github-release@0.1.3
   slack: circleci/slack@3.4.2
 
 ##
@@ -202,18 +202,20 @@ jobs:
             echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}"
             docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}
       - run:
+          # Note: this is rather imperfect, but will do for now
           name: Format the changelog into the github release body
           command: |
-            git diff --no-indent-heuristic master~1 HEAD CHANGELOG.md | sed -n '/^+[^+]/ s/^+//p' > /tmp/changes
+            git diff --no-indent-heuristic master~5 HEAD CHANGELOG.md | sed -n '/^+[^+]/ s/^+//p' > /tmp/changes
             echo 'export RELEASE_CHANGES=`cat /tmp/changes`' >> $BASH_ENV
       - run:
           name: check the release changes
           command: |
             echo "Changes are: ${RELEASE_CHANGES}"
       - github-release/create:
-          release-name: ${CIRCLE_TAG}
-          release-body: ${RELEASE_CHANGES}
-          path: CHANGELOG.md
+          tag: ${CIRCLE_TAG}
+          title: ${CIRCLE_TAG} Release
+          description: ${RELEASE_CHANGES}
+          file-path: CHANGELOG.md
       # - slack/status:
       #     webhook: "$SLACK_WEBHOOK_ANNOUNCEMENT"
       #     success_message: '*"${CIRCLE_PROJECT_REPONAME}"* - Release \`"${CIRCLE_TAG}"\` \nhttps://github.com/mojaloop/"${CIRCLE_PROJECT_REPONAME}"/releases/tag/"${CIRCLE_TAG}"'
@@ -233,39 +235,40 @@ workflows:
             tags:
               only: /.*/
 
-      - test-setup:
-          context: org-global
-          filters:
-            tags:
-              only: /.*/
+      # TODO: reenable
+      # - test-setup:
+      #     context: org-global
+      #     filters:
+      #       tags:
+      #         only: /.*/
 
-      - test-unit:
-          requires:
-            - test-setup
-          context: org-global
-          filters:
-            tags:
-              only: /.*/
+      # - test-unit:
+      #     requires:
+      #       - test-setup
+      #     context: org-global
+      #     filters:
+      #       tags:
+      #         only: /.*/
 
-      - test-coverage:
-          requires:
-            - test-setup
-          context: org-global
-          filters:
-            tags:
-              only: /.*/
+      # - test-coverage:
+      #     requires:
+      #       - test-setup
+      #     context: org-global
+      #     filters:
+      #       tags:
+      #         only: /.*/
 
-      # New commits to master release automatically
-      - release:
-          context: org-global
-          requires:
-            - build-local
-            - test-unit
-            - test-coverage
-          filters:
-            branches:
-              only:
-                - master
+      # # New commits to master release automatically
+      # - release:
+      #     context: org-global
+      #     requires:
+      #       - build-local
+      #       - test-unit
+      #       - test-coverage
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
 
       # New Tags are built and deployed as docker artifacts
       - publish:
