--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ version: 2.1
 ##
 orbs:
   anchore: anchore/anchore-engine@1.6.0
+  github-release: h-matsuo/github-release@0.1.3
   slack: circleci/slack@3.4.2
 
 ##
@@ -200,7 +201,25 @@ jobs:
             docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:latest
             echo "Publishing $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}"
             docker push $DOCKER_ORG/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG}
-
+      - run:
+          # Note: this is rather imperfect, but will do for now
+          name: Format the changelog into the github release body
+          command: |
+            git diff --no-indent-heuristic master~5 HEAD CHANGELOG.md | sed -n '/^+[^+]/ s/^+//p' > /tmp/changes
+            echo 'export RELEASE_CHANGES=`cat /tmp/changes`' >> $BASH_ENV
+      - run:
+          name: check the release changes
+          command: |
+            echo "Changes are: ${RELEASE_CHANGES}"
+      - github-release/create:
+          # TODO: GITHUB_RELEASE_TOKEN is a personal access token for Lewis!
+          # This is less than ideal, but there are currently no ways to give
+          # more permissions to the default CircleCI ${GITHUB_TOKEN}!
+          github-token-variable: ${GITHUB_RELEASE_TOKEN}
+          tag: ${CIRCLE_TAG}
+          title: ${CIRCLE_TAG} Release
+          description: ${RELEASE_CHANGES}
+          file-path: CHANGELOG.md
       # - slack/status:
       #     webhook: "$SLACK_WEBHOOK_ANNOUNCEMENT"
       #     success_message: '*"${CIRCLE_PROJECT_REPONAME}"* - Release \`"${CIRCLE_TAG}"\` \nhttps://github.com/mojaloop/"${CIRCLE_PROJECT_REPONAME}"/releases/tag/"${CIRCLE_TAG}"'
@@ -212,24 +231,35 @@ jobs:
 ##
 workflows:
   version: 2
-
   build_test_release:
     jobs:
       - build-local:
           context: org-global
+          filters:
+            tags:
+              only: /.*/
 
       - test-setup:
           context: org-global
+          filters:
+            tags:
+              only: /.*/
 
       - test-unit:
-          context: org-global
           requires:
             - test-setup
+          context: org-global
+          filters:
+            tags:
+              only: /.*/
 
       - test-coverage:
-          context: org-global
           requires:
             - test-setup
+          context: org-global
+          filters:
+            tags:
+              only: /.*/
 
       # New commits to master release automatically
       - release:
@@ -252,7 +282,7 @@ workflows:
             - test-coverage
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*(\-snapshot)?(\-hotfix(\.[0-9]+))?/
+              only: /.*/
             branches:
               ignore:
                 - /.*/
