--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
       - run:
           name: Install git
           command: |
-            apt-get install -y git
+            sudo apt-get install -y git
       - checkout
       - attach_workspace:
           at: /tmp
